[package]
name = "virtualdj-plugin-sdk"
version = "0.1.2"
edition = "2021"
authors = ["Thomas Landman"]
description = "Rust bindings for the VirtualDJ Plugin SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ikamondj/VirtualDJRustSDK"
readme = "README.md"
keywords = ["virtualdj", "plugin", "sdk", "audio", "dj"]
categories = ["multimedia::audio"]

[dependencies]

[build-dependencies]
cc = "1.0"

[[example]]
name = "simple_dsp"
path = "examples/simple_dsp.rs"

[lib]
name = "virtualdj_plugin_sdk"
path = "rs_core/lib.rs"
